--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -8,4 +8,4 @@ spring.datasource.username=postgres
 spring.datasource.password=1234567
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.hibernate.ddl-auto=none.h2.console.path=/h2-console
+spring.jpa.hibernate.ddl-auto=none
